--- a/split_smart/pubspec.yaml
+++ b/split_smart/pubspec.yaml
@@ -28,18 +28,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.18.0+1
+  #firebase_core: ^0.5.0
+  #firebase_auth: ^0.18.0+1
+  firebase_core: "^0.7.0"
+  firebase_auth: "^0.20.1"
+
+  #firebase_crashlytics: "^0.4.0+1"
+  cloud_firestore: "^0.16.0+1"
+  #cloud_functions: "^0.9.0"
+  firebase_storage: "^7.0.0"
+  #firebase_messaging: "^8.0.0-dev.15"
+  #firebase_remote_config: "^0.8.0-dev.0"
 
   provider: ^5.0.0
   percent_indicator: ^2.1.7+2
   hexcolor: ^2.0.3
   flutter_svg: ^0.19.1
   google_sign_in: ^4.5.9
-
-
-
-
 
 
 
